# ska-sdp-qa-signal-display

./: .babelrc  .dockerignore  .env  .env.local  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .npmrc  .nycrc  .prettierignore  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  bumpver.toml  cypress.config.js  cypress.config.ts  cypress.d.ts  default.conf  docker-compose-broker.yml  docker-compose-sig.yml  docker-compose.yml  jest.config.js  junit.xml  linting.xml  linuxGettingStarted.bash  next.config.js  nginx_env_config.sh  package-lock.json  package.json  prettier.config.js  pyproject.toml  start.sh  (+3 more)
.next/: trace
broker-api/: .env  Dockerfile  README.md  requirements.txt
casa-data-feeder/: .gitignore  README.md
display-api/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  log-config.json  requirements.txt
display-ui/: .dockerignore  .env  .env-production  .eslintrc  Dockerfile  README.md  package-lock.json  package.json  prettier.config.js
docs/: Doxyfile.in  Makefile  README.md  requirements.txt
env_scripts/: env_config  env_config.sh
make/: Makefile
metric-generator/: .env  .gitignore  Dockerfile  README.md  main.py  ms_to_qa.py  ms_to_spectrumplt.py  plasma_to_spectrumplt.py  qa.py  rand_phase_display_data.py  rand_spectrumplt.py  rand_spectrumplt_data.py  read_plasma_object_store.py  requirements.txt  rfi_main.py
producer-api/: .env  .gitignore  Dockerfile  Makefile  README.md  requirements.txt
public/: index.html  manifest.json
reports/: report.xml
(+449 files in other folders)
