#Dependencies to resolve security vulnerabilities
python = "^3.10"
cryptography = "42.0.5"
urllib3 = "2.2.1"

[tool.poetry]
name = "ska-sdp-qa-display"
version = "0.17.0"
description = "Signal Display frontend"
authors = ["NALEDI <naledi@sarao.ac.za>"]
license = "BSD-3-Clause"
packages = []
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10, <3.12"

[tool.poetry.group.docs.dependencies]
sphinx = "7.2.6"
ska-ser-sphinx-theme = "^0.2.0"
sphinx-copybutton = "0.5.2"
sphinx-new-tab-link = "^0.5.2"
m2r2 = "^0.3.3.post2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

